--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
 
 <div class="container">
 
+      <div class="card">
+      <h3>Free Trail</h3>
+      <div class="price">Price : Free</div>
+      <ul>
+        <li>1 Page</li>
+        <li>Simple</li>
+        <li>Desgin By Team Cant Custmozi</li>
+      </ul>
+      <button class="buy" data-plan="Professional" data-price="25000">Buy Now</button>
+    </div>
+  </div>
+
   <div class="pricing">
     <div class="card">
       <h3>Basic</h3>
