--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <ul>
         <li>1 Page</li>
         <li>Simple</li>
-        <li>Desgin By Team Cant Custmozi</li>
+        <li>Desgin By Team </li>
       </ul>
       <button class="buy" data-plan="Professional" data-price="25000">Buy Now</button>
     </div>
