--- a/index.html
+++ b/index.html
@@ -1,360 +1,130 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Farhan Website Creater — Professional Website Packages</title>
-  <style>
-    :root{
-      --bg-a:#0f1724;
-      --bg-b:#0b1220;
-      --card:#0f1728;
-      --muted:#9aa3bf;
-      --accent:#06b6d4;
-      --accent-2:#7c3aed;
-      --success:#16a34a;
-      --glass: rgba(255,255,255,0.04);
-      --radius:14px;
-      --shadow: 0 10px 30px rgba(2,6,23,0.6);
-      --maxw:1100px;
-      --ff: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      font-family:var(--ff);
-      color:#e6eef7;
-      background: linear-gradient(180deg,var(--bg-a),var(--bg-b));
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      padding:28px 18px;
-    }
-
-    .wrap{max-width:var(--maxw);margin:0 auto}
-
-    header{display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:26px}
-    .brand{display:flex;align-items:center;gap:14px}
-    .logo{
-      width:64px;height:64px;border-radius:12px;
-      background:linear-gradient(135deg,var(--accent-2),var(--accent));
-      display:flex;align-items:center;justify-content:center;font-weight:800;color:white;font-size:20px;
-      box-shadow:0 8px 30px rgba(12,10,22,0.6);
-    }
-    .brand h1{font-size:20px;margin:0}
-    .brand p{margin:0;font-size:13px;color:var(--muted)}
-
-    nav a{color:var(--muted);text-decoration:none;font-weight:600;margin-left:12px}
-
-    .hero{
-      display:flex;gap:24px;align-items:stretch;
-      margin-bottom:34px;
-      flex-wrap:wrap;
-    }
-    .hero-left{flex:1;min-width:300px}
-    .hero-right{width:360px;min-width:300px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:var(--radius);padding:20px;box-shadow:var(--shadow);border:1px solid var(--glass)}
-    .hero-left h2{font-size:30px;margin:0 0 8px}
-    .hero-left p{color:var(--muted);margin:0 0 16px;max-width:700px}
-
-    .features{display:flex;gap:12px;flex-wrap:wrap;margin-top:14px}
-    .feature{background:rgba(255,255,255,0.02);padding:10px 12px;border-radius:10px;font-size:13px;color:var(--muted)}
-
-    /* pricing grid */
-    .pricing{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:18px;margin-top:18px}
-    .plan{
-      background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-      border-radius:12px;padding:18px;border:1px solid var(--glass);box-shadow:0 8px 24px rgba(2,6,23,0.5);
-      transition:transform .22s, box-shadow .22s;
-      display:flex;flex-direction:column;gap:10px;
-    }
-    .plan:hover{transform:translateY(-6px);box-shadow:0 18px 40px rgba(2,6,23,0.7)}
-    .plan h3{margin:0;color:var(--accent);font-size:18px}
-    .price{font-weight:800;font-size:22px}
-    .badge{display:inline-block;padding:6px 10px;border-radius:999px;background:linear-gradient(90deg,var(--accent),var(--accent-2));color:#021124;font-weight:700;font-size:13px}
-    ul{color:var(--muted);margin:8px 0 0;padding-left:18px;line-height:1.6}
-    .buy{margin-top:auto;padding:10px 12px;border-radius:10px;border:0;background:linear-gradient(90deg,var(--accent),var(--accent-2));color:#021124;font-weight:800;cursor:pointer;font-size:15px}
-
-    /* modal */
-    .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:linear-gradient(rgba(2,6,23,0.6), rgba(2,6,23,0.7));z-index:600;padding:18px}
-    .dialog{width:100%;max-width:520px;background:linear-gradient(180deg,#0b1220,#0f1728);border-radius:14px;padding:18px;border:1px solid rgba(255,255,255,0.03);box-shadow:0 24px 60px rgba(2,6,23,0.8)}
-    .dialog h3{margin:0 0 6px}
-    .dialog p{color:var(--muted);margin:0 0 12px}
-
-    .choices{display:flex;gap:12px;margin-top:14px;flex-wrap:wrap}
-    .choice{
-      flex:1;min-width:170px;padding:12px;border-radius:12px;background:linear-gradient(180deg, rgba(255,255,255,0.015), rgba(255,255,255,0.01));cursor:pointer;border:2px solid transparent;display:flex;flex-direction:column;align-items:center;gap:10px;
-      transition:transform .18s,border-color .18s,box-shadow .18s;
-    }
-    .choice:hover{transform:translateY(-6px);border-color:rgba(255,255,255,0.06);box-shadow:0 12px 30px rgba(2,6,23,0.6)}
-    .choice .icon{width:52px;height:52px;border-radius:12px;display:flex;align-items:center;justify-content:center;font-weight:800;color:white}
-    .wsIcon{background:linear-gradient(90deg,#25D366,#1EBEA4)}
-    .dcIcon{background:linear-gradient(90deg,#5865F2,#6A8BFF)}
-
-    .actions{display:flex;gap:10px;justify-content:flex-end;margin-top:16px}
-    .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted);padding:8px 12px;border-radius:10px;cursor:pointer}
-    .btn-primary{background:linear-gradient(90deg,var(--accent),var(--accent-2));color:#021124;padding:8px 12px;border-radius:10px;border:0;cursor:pointer;font-weight:700}
-
-    .successBox{text-align:center;padding:28px 10px;display:none}
-    .successBox .tick{font-size:72px;color:var(--success);line-height:1}
-    .successBox h4{margin:12px 0 6px}
-    .successBox p{color:var(--muted)}
-
-    footer{margin-top:34px;text-align:center;color:var(--muted);font-size:13px;padding:12px}
-    @media (max-width:820px){
-      .hero-right{order:2;width:100%}
-      .hero-left{order:1}
-      .choices{flex-direction:column}
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Farhan Website Creator</title>
+<style>
+body {
+    font-family: Arial, sans-serif;
+    background: #f2f2f2;
+    margin: 0;
+    padding: 0;
+}
+header {
+    background: #111827;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
+.logo {
+    height: 80px;
+    margin-bottom: 10px;
+}
+.container {
+    max-width: 900px;
+    margin: auto;
+    padding: 20px;
+}
+.card {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    margin-bottom: 20px;
+    text-align: center;
+}
+.card h2 {
+    margin-bottom: 10px;
+}
+.price {
+    font-size: 22px;
+    font-weight: bold;
+    color: #111827;
+}
+.buy-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    background: #111827;
+    color: white;
+    padding: 12px 20px;
+    border-radius: 8px;
+    text-decoration: none;
+    transition: 0.3s;
+    margin-top: 15px;
+}
+.buy-btn:hover {
+    opacity: 0.8;
+}
+.buy-btn img {
+    height: 22px;
+}
+</style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <div class="brand" role="banner">
-        <div class="logo" aria-hidden>FW</div>
-        <div>
-          <h1>Farhan Website Creater</h1>
-          <p>Modern • Professional • Affordable</p>
-        </div>
-      </div>
-      <nav aria-label="Main">
-        <a href="#packages">Packages</a>
-      </nav>
-    </header>
 
-    <section class="hero">
-      <div class="hero-left">
-        <h2>Beautiful websites built for your business</h2>
-        <p>We build responsive, SEO-friendly websites for individuals and businesses. Choose a package and click <strong>Buy</strong> — select WhatsApp or Discord to complete the order.</p>
+<header>
+    <img src="https://i.imgur.com/zY3Z8Qh.png" class="logo" alt="Website Logo">
+    <h1>Farhan Website Creator</h1>
+    <p>Professional Websites • Affordable Prices • Fast Delivery</p>
+</header>
 
-        <div class="features" aria-hidden>
-          <div class="feature">Fast delivery</div>
-          <div class="feature">Custom design</div>
-          <div class="feature">Secure & optimized</div>
-          <div class="feature">Support via WhatsApp / Discord</div>
-        </div>
+<div class="container">
 
-        <div id="packages" class="pricing" aria-label="Pricing packages">
-          <!-- Free Trial -->
-          <div class="plan" role="region" aria-labelledby="plan-free">
-            <div style="display:flex;justify-content:space-between;align-items:center">
-              <h3 id="plan-free">Free Trial</h3>
-              <span class="badge">Try Free</span>
-            </div>
-            <div class="price">PKR 0</div>
-            <ul>
-              <li><strong>Free Trial Included</strong> — 3 days</li>
-              <li>1 Page Landing</li>
-              <li>Contact form</li>
-              <li>Basic SEO</li>
-            </ul>
-            <button class="buy" data-plan="Free Trial" data-price="0">Try Free</button>
-          </div>
+    <!-- BASIC WEBSITE -->
+    <div class="card">
+        <h2>Basic Website</h2>
+        <p>Simple website for small business or personal use.</p>
+        <p class="price">Price: PKR 2,000</p>
 
-          <!-- Basic -->
-          <div class="plan" role="region" aria-labelledby="plan-basic">
-            <div style="display:flex;justify-content:space-between;align-items:center">
-              <h3 id="plan-basic">Basic</h3>
-              <span style="font-size:13px;color:var(--muted)">Starter</span>
-            </div>
-            <div class="price">PKR 3,000</div>
-            <ul>
-              <li>1–2 pages</li>
-              <li>Responsive layout</li>
-              <li>Contact form + map</li>
-            </ul>
-            <button class="buy" data-plan="Basic" data-price="5000">Buy</button>
-          </div>
+        <a class="buy-btn" href="https://wa.me/923121798054">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
+            Buy on WhatsApp
+        </a>
 
-          <!-- Normal -->
-          <div class="plan" role="region" aria-labelledby="plan-normal">
-            <div style="display:flex;justify-content:space-between;align-items:center">
-              <h3 id="plan-normal">Normal</h3>
-              <span style="font-size:13px;color:var(--muted)">Popular</span>
-            </div>
-            <div class="price">PKR 9,000</div>
-            <ul>
-              <li>Up to 5 pages</li>
-              <li>Custom UI design</li>
-              <li>SEO – On page</li>
-            </ul>
-            <button class="buy" data-plan="Normal" data-price="12000">Buy</button>
-          </div>
-
-          <!-- Business -->
-          <div class="plan" role="region" aria-labelledby="plan-business">
-            <div style="display:flex;justify-content:space-between;align-items:center">
-              <h3 id="plan-business">Business</h3>
-              <span style="font-size:13px;color:var(--muted)">Recommended</span>
-            </div>
-            <div class="price">PKR 20,000</div>
-            <ul>
-              <li>Up to 10 pages</li>
-              <li>CMS / Blog</li>
-              <li>Performance optimization</li>
-            </ul>
-            <button class="buy" data-plan="Business" data-price="25000">Buy</button>
-          </div>
-
-          <!-- Professional -->
-          <div class="plan" role="region" aria-labelledby="plan-pro">
-            <div style="display:flex;justify-content:space-between;align-items:center">
-              <h3 id="plan-pro">Professional</h3>
-              <span style="font-size:13px;color:var(--muted)">Enterprise</span>
-            </div>
-            <div class="price">PKR 35,000</div>
-            <ul>
-              <li>Custom >10 pages or E-commerce</li>
-              <li>Premium support + SLA</li>
-              <li>Advanced integrations</li>
-            </ul>
-            <button class="buy" data-plan="Professional" data-price="45000">Buy</button>
-          </div>
-        </div>
-
-      </div>
-
-      <aside class="hero-right" aria-hidden>
-        <h4 style="margin:0 0 8px">Contact</h4>
-        <p style="color:var(--muted);margin:0 0 8px">WhatsApp: <strong>+92 312 1798054</strong></p>
-        <p style="color:var(--muted);margin:0 0 8px">Discord: <strong>farhansajideditz</strong></p>
-        <div style="height:12px"></div>
-        <div style="background:linear-gradient(90deg,var(--accent),var(--accent-2));padding:12px;border-radius:10px;color:#021124;font-weight:800;text-align:center">
-          Get a professional website today
-        </div>
-      </aside>
-    </section>
-
-    <footer>
-      © <span id="year"></span> Farhan Website Creater — All rights reserved
-    </footer>
-  </div>
-
-  <!-- Modal -->
-  <div class="modal" id="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
-    <div class="dialog" role="document">
-      <h3 id="modalTitle">Complete your purchase</h3>
-      <p id="modalDesc">Choose how you'd like to contact Farhan to complete the order.</p>
-
-      <div class="choices" id="choices">
-        <div class="choice" id="choose-ws" tabindex="0" role="button" aria-pressed="false">
-          <div class="icon wsIcon" aria-hidden>WA</div>
-          <div style="font-weight:700">WhatsApp</div>
-          <div style="color:var(--muted);font-size:13px">Chat with +92 312 1798054</div>
-        </div>
-
-        <div class="choice" id="choose-dc" tabindex="0" role="button" aria-pressed="false">
-          <div class="icon dcIcon" aria-hidden>DC</div>
-          <div style="font-weight:700">Discord</div>
-          <div style="color:var(--muted);font-size:13px">Username: <code>farhansajideditz</code></div>
-        </div>
-      </div>
-
-      <div class="successBox" id="successBox" aria-live="polite">
-        <div class="tick">✔</div>
-        <h4>Thanks For Purchase!</h4>
-        <p>We have received your order. Follow the instructions to complete the setup.</p>
-      </div>
-
-      <div class="actions" id="modalActions" style="margin-top:12px">
-        <button class="btn-ghost" id="btnCancel">Cancel</button>
-        <button class="btn-primary" id="btnProceed" style="display:none">Proceed</button>
-      </div>
+        <a class="buy-btn" href="https://discord.com/users/farhansajideditz">
+            <img src="https://cdn-icons-png.flaticon.com/512/906/906361.png">
+            Buy on Discord
+        </a>
     </div>
-  </div>
 
-<script>
-  // small helpers & setup
-  document.getElementById('year').textContent = new Date().getFullYear();
+    <!-- PROFESSIONAL WEBSITE -->
+    <div class="card">
+        <h2>Professional Website</h2>
+        <p>Full business website with contact forms, features, and design.</p>
+        <p class="price">Price: PKR 5,000</p>
 
-  const buyBtns = document.querySelectorAll('.buy');
-  const modal = document.getElementById('modal');
-  const chooseWs = document.getElementById('choose-ws');
-  const chooseDc = document.getElementById('choose-dc');
-  const successBox = document.getElementById('successBox');
-  const choices = document.getElementById('choices');
-  const btnCancel = document.getElementById('btnCancel');
-  const btnProceed = document.getElementById('btnProceed');
-  const modalTitle = document.getElementById('modalTitle');
+        <a class="buy-btn" href="https://wa.me/923121798054">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
+            Buy on WhatsApp
+        </a>
 
-  let selectedPlan = null;
-  let selectedPrice = null;
+        <a class="buy-btn" href="https://discord.com/users/farhansajideditz">
+            <img src="https://cdn-icons-png.flaticon.com/512/906/906361.png">
+            Buy on Discord
+        </a>
+    </div>
 
-  // open modal on buy
-  buyBtns.forEach(b => b.addEventListener('click', e => {
-    selectedPlan = b.dataset.plan;
-    selectedPrice = b.dataset.price;
-    modalTitle.textContent = `Buy — ${selectedPlan} (PKR ${selectedPrice})`;
-    choices.style.display = 'flex';
-    successBox.style.display = 'none';
-    btnProceed.style.display = 'none';
-    modal.style.display = 'flex';
-    // reset aria
-    chooseWs.setAttribute('aria-pressed','false');
-    chooseDc.setAttribute('aria-pressed','false');
-  }));
+    <!-- FREE TRIAL -->
+    <div class="card">
+        <h2>Free Trial Website</h2>
+        <p>Get a demo website for 24 hours completely free.</p>
+        <p class="price">Price: FREE</p>
 
-  // Whatsapp flow: open wa.me with Pakistan number
-  chooseWs.addEventListener('click', () => {
-    // show success
-    choices.style.display = 'none';
-    successBox.style.display = 'block';
+        <a class="buy-btn" href="https://wa.me/923121798054">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
+            Claim on WhatsApp
+        </a>
 
-    // open WhatsApp chat
-    const number = '923121798054'; // +92 312 1798054 (Pakistan)
-    const text = encodeURIComponent(`Hello Farhan, I'm interested in the "${selectedPlan}" plan (PKR ${selectedPrice}). Please share next steps.`);
-    const url = `https://wa.me/${number}?text=${text}`;
+        <a class="buy-btn" href="https://discord.com/users/farhansajideditz">
+            <img src="https://cdn-icons-png.flaticon.com/512/906/906361.png">
+            Claim on Discord
+        </a>
+    </div>
 
-    // open after small delay so user sees success
-    setTimeout(() => {
-      window.open(url, '_blank');
-    }, 700);
+</div>
 
-    // auto-close modal after short delay
-    setTimeout(() => {
-      modal.style.display = 'none';
-    }, 1900);
-  });
-
-  // Discord flow: copy username to clipboard and open Discord web/app
-  chooseDc.addEventListener('click', async () => {
-    choices.style.display = 'none';
-    successBox.style.display = 'block';
-
-    const username = 'farhansajideditz';
-    try {
-      await navigator.clipboard.writeText(username);
-      // notify copied via success box already visible
-    } catch (err) {
-      // ignore; user can copy manually
-    }
-
-    // open Discord web (user should paste username to DM)
-    setTimeout(() => {
-      // open Discord app or web
-      window.open('https://discord.com/app', '_blank');
-    }, 700);
-
-    setTimeout(() => {
-      modal.style.display = 'none';
-    }, 1900);
-  });
-
-  // keyboard accessibility (Enter on choice)
-  [chooseWs, chooseDc].forEach(el => {
-    el.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter' || e.key === ' ') el.click();
-    });
-  });
-
-  // close modal
-  btnCancel.addEventListener('click', () => { modal.style.display = 'none'; });
-  window.addEventListener('keydown', (e) => { if (e.key === 'Escape') modal.style.display = 'none'; });
-
-  // close clicking outside dialog
-  modal.addEventListener('click', (e) => {
-    if (e.target === modal) modal.style.display = 'none';
-  });
-</script>
 </body>
 </html>
