--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     successBox.style.display = 'block';
 
     // open WhatsApp chat
-    const number = '923121798054'; // +92 312 1798054 (Pakistan)
+    const number = '966594786474'; // +966 59 478 6474 (KSA)
     const text = encodeURIComponent(`Hello Farhan, I'm interested in the "${selectedPlan}" plan (PKR ${selectedPrice}). Please share next steps.`);
     const url = `https://wa.me/${number}?text=${text}`;
 
