Update WhatsApp contact number in index.html

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <div class="choice" id="choose-ws" tabindex="0" role="button" aria-pressed="false">
           <div class="icon wsIcon" aria-hidden>WA</div>
           <div style="font-weight:700">WhatsApp</div>
-          <div style="color:var(--muted);font-size:13px">Chat with +92 312 1798054</div>
+          <div style="color:var(--muted);font-size:13px">Chat with +966 59 478 6474</div>
         </div>
 
         <div class="choice" id="choose-dc" tabindex="0" role="button" aria-pressed="false">
